Add timeout info to vertex